# llmcast

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
llmapping/: __init__.py  cli.py  mapper.py
llmcast/: __init__.py  cli.py  mapper.py
tests/: test_mapper.py
