[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmapping"
version = "0.1.0"
description = "Use LLM to convert data from one schema to another"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
]

[project.scripts]
llmapping = "llmapping.cli:main"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
